--- a/Front-end/css/style.css
+++ b/Front-end/css/style.css
@@ -96,6 +96,14 @@ img {
       overflow: hidden;
 }
 
+.story {
+      display: block;
+      width:100%;
+      height:100%;
+      object-fit: contain;
+      overflow: hidden;
+}
+
 .blur {filter: blur(4px);}
 .brightness {filter: brightness(250%);}
 .contrast {filter: contrast(180%);}
@@ -204,7 +212,7 @@ ol {
 }
 
 .modal-lg {
-    max-width: 80%;
+    max-width: 95%;
 }
 
 .modal-posts {		
@@ -345,8 +353,26 @@ ol {
 	color: #ffffff;
 	text-transform: uppercase;
 	font-weight: 700;
-	background: #fa4299;
+	background: -webkit-linear-gradient(left, #a445b2, #fa4299, #ff7733);;
 	letter-spacing: 2px;
+}
+
+.follow-btn {
+    position: absolute;
+    right:0;
+    color: #fff;
+    border-radius: 4px;
+    background: -webkit-linear-gradient(left, #a445b2, #fa4299, #ff7733);
+    text-decoration: none;
+    transition: all 0.4s;
+    line-height: normal;
+    border: none;
+}
+
+.follow-btn:hover {
+    color: #fff;
+    background: #666666;
+    outline: none;
 }
 
 .second-btn {
@@ -451,6 +477,14 @@ label {
 		border-left-color: transparent;
 	}
 }
+
+/*---------------------
+  Carousel
+----------------------*/
+
+
+
+
 
 /*---------------------
   Header
